--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
     </head>
 
     <body>
-        <div>
-            <h2>
-                Hello World!
-            </h2>
+        <div id="top-container">
+            <div id="top-text">
+                <div class="individual-text-container">
+                    <a class="header-text" href="https://mail.google.com/mail" target="_top">Gmail</a>
+                </div>
+                <div class="individual-text-container">
+                    <a class="header-text" href="https://www.google.pt/imghp?hl=en&tab=wi&authuser=0&ogbl" target="_top">Images</a>
+                </div>
+            </div>
+            <div id="top-icons">
+                
+            </div>
         </div>
     </body>
 </html>
