--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="main.css" rel="stylesheet" type="text/css"/>
+    <link href="css-reset.css" rel="stylesheet" type="text/css"/>
     </head>
 
     <body>
