--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
                         <a class="header-text" href="https://www.google.pt/imghp?hl=en&tab=wi&authuser=0&ogbl" target="_top">Imagens
                         </a>
                         <img id="icon-img" src="https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_apps_48px-512.png">
-                        <a class="account-img" href="https://accounts.google.com/" target="_top">Entrar
-                        </a>
+                        <div id="enter-btn-container"> 
+                            <a id="enter-btn" href="https://accounts.google.com/" target="_top">Entrar</a>
+                        </div>
                     </div>
                 </div>
             </div>
