search bar done

--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
                 <div id="form-container">
                     <div id="search-form">
                         <form>
-                            <div id="form-container">
-                                <img id="search-icon" src="https://p7.hiclipart.com/preview/456/948/884/computer-icons-desktop-wallpaper-web-search-engine-wordpress-com-clip-art-png-search-download-icon.jpg"/>
-                                <input id="search-input" type="text"/>
-                                <img id="keyboard-icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/Keyboard-icon_Wikipedians.svg/1024px-Keyboard-icon_Wikipedians.svg.png"/>
-                                <img id="microphone-icon" src="https://www.clipartmax.com/png/middle/146-1462656_open-google-voice-search-icon.png"/>
+                            <div id="form-elements-container">
+                                <div id="elements-container">
+                                    <img id="search-icon" src="https://cdn.pixabay.com/photo/2017/01/13/01/22/magnifying-glass-1976105_960_720.png"/>
+                                    <input id="search-input" type="text"/>
+                                    <img id="keyboard-icon" src="https://i.ya-webdesign.com/images/keyboard-icon-png-17.png"/>
+                                    <img id="microphone-icon" src="https://www.freepngimg.com/thumb/microphone/70666-voice-microphone-google-search-logo-png-file-hd.png"/>
+                                </div>
                             </div>
                         </form>
                     </div>
