--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="footer-container">
-                <div id="footer-container-left">
+                <span id="footer-container-left">
                     <a class="footer-item" href="https://ads.google.com/intl/en_pt/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1" target="_top">Publicidade
                     </a>
                     <a class="footer-item" href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1#?modal_active=none" target="_top">Negócios
@@ -68,16 +68,16 @@
                     </a>
                     <a class="footer-item" href="https://www.google.com/search/howsearchworks/?fg=1" target="_top">Como funciona a Pesquisa
                     </a>
-                </div>
+                </span>
     
-                <div id="footer-container-right">
+                <span id="footer-container-right">
                     <a class="footer-item" href="https://policies.google.com/privacy?fg=1" target="_top">Privacidade
                     </a>
                     <a class="footer-item" href="https://policies.google.com/terms?fg=1" target="_top">Termos
                     </a>
-                    <a class="footer-item" href="https://www.google.com/preferences?hl=en" target="_top">definições
+                    <a class="footer-item" href="https://www.google.com/preferences?hl=en" target="_top">Definições
                     </a>
-                </div>
+                </span>
             </div>
         </footer>
     </body>
